# specify

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  install.sh  plugin.json  pyproject.toml  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.specify/: FEATURES.md  INDEX.md
dev/: symlink.sh  unsymlink.sh
docs/: how-it-works.md
roadmap/studio/: discussion.md  mvp.md
skills/specify-close/: SKILL.md
skills/specify-init/: SKILL.md
skills/specify-memory/: SKILL.md
skills/specify-plan/: SKILL.md
skills/specify-review/: SKILL.md
skills/specify-sdd/: SKILL.md
skills/specify.close/: SKILL.md
skills/specify.init/: SKILL.md
skills/specify.memory/: SKILL.md
skills/specify.new/: SKILL.md
skills/specify.plan/: SKILL.md
skills/specify.review/: SKILL.md
skills/specify.sdd/: SKILL.md
src/cli/: cmd_artifact.py  cmd_context.py  cmd_gate.py  cmd_harvest.py  cmd_init.py  cmd_log.py  cmd_memory.py  cmd_studio.py  cmd_task.py  main.py
src/core/: gate_validator.py  lang_detector.py  logger.py  project.py  spec_reader.py  worktree.py
src/db/: connection.py  gates.py  links.py  memory.py  schema.py  searches.py  tasks.py  vectors.py
src/embeddings/: provider.py
src/hooks/: post_tool_use.py  session_start.py
src/studio/: app.py  graph.py
templates/: index_md.template  index_md_unknown.template  worktreeinclude
tests/e2e/: test_smoke.py
tests/unit/: test_contextual_injection.py  test_debug_logging.py  test_gate_validator.py  test_gates.py  test_graph.py  test_logger.py  test_memory.py  test_memory_format.py  (+9 more)
(+39 files in other folders)
