[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specify"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "sqlite-vec>=0.1.9",
]

[project.scripts]
specify = "src.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
